Major visual compressions for Phone users
reduced the length of the screen for each page created so far, ideal to phone users.

--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,11 @@
 	font-size: 1.2em;
 	margin-top: -140px;
 }
+
+/*<!-------------------------------------------------------------------->*/
+/*<!---------------------------CREATE MATCH----------------------------->*/
+/*<!-------------------------------------------------------------------->*/
+
+.accordion-body {
+	padding: 0 !important;
+}
